[gd_scene load_steps=3 format=3 uid="uid://byof7auc0ufdm"]

[ext_resource type="Theme" uid="uid://b8hu7woxj8ce7" path="res://theme/theme-light.tres" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://iatryakl2oh1" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0xm2m")
script = ExtResource("1_ig7tw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonOpen" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Open"

[node name="LabelTitle" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="ButtonTheme" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "theme"

[node name="ButtonClose" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "close"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
scroll_smooth = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File or Directory"
force_native = true
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 3
use_native_dialog = true
